! company info URLs were just the IMDB relative URL w/o protocol and site. Added the missing info
! if production spanned multiple years (xxxx-yyyy), movie type was setup wrongly ("type xxxx-")
+ added method imdb::endyear() for cases where production spanned multiple years. So for
  "xxxx-yyyy" this returns "yyyy", while imdb::year() is adjusted to "xxxx". Otherwise, both
  return the same year.

v2.1.1 (19.12.2011)
-------------------
+ imdb: adding new budget class
+ imdb nowplaying: added Top-10-Boxoffice
+ movies: added method movietype to check wheter it is a movie, tv series, ...
* updated API reference
! is_serial() did always return FALSE (site-change)
* fixed a bunch of NOTICEs
! imdb::languages() had problems with some ISO settings - hopefully fixed now.
* sometimes imdb::genres() did not return all available genres

v2.1.0 (11.10.2011)
-------------------
! movieposterdb class was broken due to site changes at movieposterdb.com; applied a quick-hack to fix it
! fixes due to site changes: imdb::rating, imdb::goofs
* complete rewrite of imdb_nowplaying class (location and structure of page had changed)
+ some improvements to episode data (see http://projects.izzysoft.de/trac/imdbphp/ticket/255 for details)
! trailers on Moviepilot were broken due to changed URL
! pilot: fixed mainPictures() due to API changes
! pilot_person: fixed photos() due to API changes
+ added basic check for pilot classes (corresponding to the IMDB checks)

v2.0.7 (21.08.2011)
-------------------
! site changes again: fixed imdb_person:name (tnx to GeorgeFive and Qvist)
! same reason: imdb::votes(), imdb::country() and imdb::mpaa_reason()
! same reason, just a couple of days later: imdb rating
! imdb_person class: filmografies no longer listed movie names due to site changes
* imdb_person class: character names w/o id are listed again in filmografies
! IMDB started to sometimes pre- or postfix movie titles with "IMDb", becoming part of the title then